--- a/app/views/radios/index.html.erb
+++ b/app/views/radios/index.html.erb
@@ -4,9 +4,21 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <div class="topic-index-single">
+            　<div class ="profile-img">
+                  <%= link_to user_path(radio.user_id) do %>
+                   <% if radio.user.image? %>
+                     <%= image_tag radio.user.image.url,class:"icon-image" %>
+                   <% else %>
+                        <%= image_tag 'images/icons/no_icon.png',class:"icon-image" %>
+                   <% end %>
+                  <% end %>
+              </div>
             <h2 class="topic-author">
               <%= radio.user.name %>
             </h2>
+             <div class="radio-title">
+               <%= radio.title %>
+             </div>
             <%= audio_tag radio.audio_url, :controls => true if radio.audio? %>
               <% if !radio.favorite_users.include?(current_user) %>
                   <%= link_to favorites_path(radio_id: radio.id), method: :post do %>
@@ -19,9 +31,10 @@
               <% end %>
                 <%= radio.favorites.count %>  
               <% end %>
-            
-            <%= image_tag 'images/icons/comment.png', class: 'topic-index-icon' %>
-            
+              <%= link_to radio_path(radio) do %>
+             <i class="far fa-comment  fa-2x"></i>
+             <% end %>
+              <%= radio.comments.count %>
             <% if radio.user == current_user %>
               <%= link_to edit_radio_path(radio) do %>
               <i class="far fa-edit fa-2x"></i>
@@ -30,13 +43,9 @@
               <i class="far fa-trash-alt fa-2x"></i>
               <% end %>
             <% end %>
-            
             <p class="topic-text">
-              <div>タイトル</div>
-              <%= radio.title %>
               <div>説明</div>
               <%= radio.description %>
-              
             </p>
           </div>
         </div>
