--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,35 @@
-h1, h2 {
+.c{
+  height: 500px;
+  width :100%;
+}
+
+h1 {
   font-weight: 100;
+}
+
+h2 {
+  font-weight: 150;
+  font-size: 17px;
+}
+
+.profile-img {
+width: 55px;
+height: 65px;
+}
+
+.icon-image{
+border-radius: 30%;
+height: 55px;
+border: 1px gray solid;
+}
+
+.radio-title {
+  font-weight: 70;
+  font-size: 25px;
+  padding-right: 10px;
+  padding-left: 15px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .text-white {
@@ -126,14 +156,16 @@ h1, h2 {
   background-color: #fafafa;
   .topic-index-single {
     background-color: #fff;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     margin-top: 30px;
     border: 1px solid #e6ecf0;
     border-radius: 3px;
     .topic-author {
-      padding-right: 20px;
-      padding-left: 20px;
+      padding-right: 10px;
+      padding-left: 50px;
+      margin-top: 3px;
+      margin-bottom: 0px;
     }
 
     .topic-text {
@@ -171,13 +203,41 @@ h1, h2 {
  margin-left: 20px;
  }
  
- .white{
+ .white { 
    filter: invert(88%) sepia(61%) saturate(0%) hue-rotate(229deg) brightness(107%) contrast(101%);
   margin-top: 5px;
   zoom: 1.3;
    -webkit-text-stroke: 20px white;
  }
  
+ .radio-show-wrapper {
+  padding-top: 70px;
+  background-color: #fafafa;
+ }
+ .my-p {
+  margin-top: 15px;
+  padding-left: 15px;
+  &:hover {
+      opacity: 0.5;}
+ }
  .radio-new-icon{
    width: 1px;
  }
+
+.my-image {
+    border-radius: 30%;
+    width:  180px;
+    height: 180px;
+    border: 1px gray solid;
+    text-align:center
+}
+
+.my-page {
+  text-align:center
+}
+
+
+
+.radio-list {
+ text-align:center
+}
