--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,11 +4,19 @@
     <h2 class="text-white">Let's listen to everyone's sound</h2>
     <div class="row">
       <div class="col-md-offset-3 col-md-3">
+        <% if @user == current_user %>
         <%= link_to 'Sign up', new_user_path, class: 'btn btn-block btn-white' %>
       </div>
       <div class="col-md-3">
         <%= link_to 'Log in', login_path ,class: 'btn btn-block btn-white' %>
+        <% end %>
       </div>
+      
     </div>
+    <div class="a">
+        <div class="s-img"><%= image_tag 'images/icons/tree.png',class:"c" %></div>
+        <div class="s-img"><%= image_tag 'images/icons/green.png',class:"c" %></div>
+        <div class="s-img"><%= image_tag 'images/icons/studio.png',class:"c" %></div>
+      </div>
   </div>
 </div>
