--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,10 @@
       <div class="col-md-offset-4 col-md-4 users-new-container">
         <h1 class="text-center text-white">Sign in</h1>
         <%= form_for @user do |f| %>
+          <div>
+            <%= f.label :image %>
+            <%= f.file_field :image %>
+          </div>
           <div class="form-group">
             <%= f.label :name, class: 'text-white' %>
             <%= f.text_field :name, class: 'form-control' %>
