--- a/app/views/radios/index.html.erb
+++ b/app/views/radios/index.html.erb
@@ -5,6 +5,7 @@
         <div class="col-md-6 col-md-offset-3">
           <div class="topic-index-single">
             　<div class ="profile-img">
+            　   
                   <%= link_to user_path(radio.user_id) do %>
                    <% if radio.user.image? %>
                      <%= image_tag radio.user.image.url,class:"icon-image" %>
@@ -20,6 +21,7 @@
                <%= radio.title %>
              </div>
             <%= audio_tag radio.audio_url, :controls => true if radio.audio? %>
+            <% if logged_in? %>
               <% if !radio.favorite_users.include?(current_user) %>
                   <%= link_to favorites_path(radio_id: radio.id), method: :post do %>
                    <i class="far fa-heart fa-2x like-btn" ></i>
@@ -42,6 +44,7 @@
               <%= link_to radio_path(radio), method: :delete ,data: {confirm: "本当にいいですか？"} do %>
               <i class="far fa-trash-alt fa-2x"></i>
               <% end %>
+            <% end %>
             <% end %>
             <p class="topic-text">
               <div>説明</div>
