--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,7 +24,10 @@
             <%= f.label :password_confirmation, class: 'text-white' %>
             <%= f.password_field :password_confirmation, class: 'form-control' %>
           </div>
-
+          <div class="form-group">
+            <%= f.label :introduction, class: 'text-white' %>
+            <%= f.text_area :introduction, class: 'form-control'%>
+          </div>
           <%= f.submit "登録", class: 'btn-block btn-white' %>
         <% end %>
         <%= link_to 'ログインはこちら', login_path, class: 'text-white' %>
