--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -11,7 +11,6 @@ h2 {
   font-weight: 150;
   font-size: 17px;
 }
-
 .profile-img {
 width: 55px;
 height: 65px;
@@ -53,6 +52,10 @@ border: 1px gray solid;
   &:hover {
     color: #fff;
   }
+}
+
+.top-list{
+  margin: 5px;
 }
 
 .top-hero-wrapper {
@@ -119,7 +122,7 @@ border: 1px gray solid;
 
   .navbar-brand {
     padding: 0px;
-     height: 90px;
+     height: 80px;
      width: 250px;
      &:hover {
       opacity: 0.5;
@@ -208,6 +211,7 @@ border: 1px gray solid;
   margin-top: 5px;
   zoom: 1.3;
    -webkit-text-stroke: 20px white;
+   
  }
  
  .radio-show-wrapper {
@@ -233,10 +237,18 @@ border: 1px gray solid;
 }
 
 .my-page {
+  padding-top: 40px;
   text-align:center
 }
 
+.profile {
+  padding: 10px;
+}
 
+.profile-name{
+font-family: 'Sawarabi Mincho', sans-serif;
+font-size: 30px;  
+}
 
 .radio-list {
  text-align:center
