--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -19,5 +19,12 @@
         <div class="s-img"><%= image_tag 'images/icons/studio.png',class:"c" %></div>
       </div>
     <% end %>
+    <script>
+      $(function() {
+         $('.a').slick({
+        dots: true,
+        });
+      });
+    </script>
   </div>
 </div>
