--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -61,7 +61,7 @@ border: 1px gray solid;
 .top-hero-wrapper {
   width: 100vw;
   height: 100vh;
-  background-image: url('images/wave.jpg');
+  background-image: image-url('images/wave.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
