--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+     <%= favicon_link_tag('favicon.ico/IMG_0020.PNG') %>
     <title>Radipod</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
